<resources>
    <string name="app_name">HRIS MOBILE</string>
    <string name="presensi_masuk">Masuk</string>
    <string name="presensi_pulang">Pulang</string>
    <string name="get_lokasi">Get Lokasi</string>
    <string name="menu_training">Menu Training</string>
    <string name="nama_test">Nama Test</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_mengerjakan">Waktu mengerjakan</string>
    <string name="jumlah_soal">Jumlah soal</string>
    <string name="token">Token</string>
    <string name="mulai">Mulai</string>
    <string name="form_kunjungan">Form Kunjungan</string>
    <string name="bulan_kunjungan">Bulan Kunjungan</string>
    <string name="bulan">Bulan</string>
    <string name="bulan_bonus_proyek">Bulan Proyek</string>
    <string name="list_peserta_memo">List Peserta Memo</string>
    <string name="edit">Edit</string>
    <string name="lihat">Lihat</string>
    <string name="nama_proyek">Nama Proyek</string>
    <string name="setuju">Setuju</string>
    <string name="owner_proyek">Owner Proyek</string>
    <string name="penanggung_jawab_proyek">Penanggung Jawab</string>
    <string name="no_telp">No Telp</string>
    <string name="jam_tgl">Jam/Tgl</string>
    <string name="tahapan_proyek">Tahapan Proyek</string>
    <string name="foto_so">Foto SO</string>
    <string name="foto_proyek">Foto Proyek</string>
    <string name="foto_detail_izin">Foto Detail Izin</string>
    <string name="foto_dp">Foto Dp</string>
    <string name="info_update">Info Karyawan</string>
    <string name="info_undermaintanance">Hris info perbaikan</string>
    <string name="soal">Soal</string>
    <string name="licensi">Saya tunduk dan patuh pada tata tertib selama melakukan test ini</string>
    <string name="status_form_kunjungan">Keterangan: untuk melihat detail ketuk list  form kunjungan</string>
    <string name="status_list_bonus_proyek">Keterangan: untuk melihat detail ketuk list  bonus proyek</string>
    <string name="status_list_memo">Keterangan: untuk melihat memo ketuk list</string>
    <string name="tambah_anggota">Tambah Anggota Team</string>
    <string name="tambahkan">Tambah</string>
    <string name="hapus">Hapus</string>
    <string name="divisi">Divisi</string>
    <string name="menu_izin_dinas">izin dinas</string>
    <string name="menu_izin_mt">izin meninggalkan tugas</string>
    <string name="ket_menu_approve">Merupakan menu yang dapat diakses oleh karyawan yang telah ditetapkan oleh HRD</string>
    <string name="new_icon">NEW</string>
    <string name="menu_kasbon">kasbon</string>
    <string name="menu_pinjaman">pinjaman</string>
    <string name="menu_slip_gaji">Slip Gaji</string>
    <string name="menu_cuti">cuti</string>
    <string name="menu_izin">izin</string>
    <string name="menu_bonus">bonus</string>
    <string name="menu_jadwal_masuk">jadwal masuk</string>
    <string name="menu_proyek_manajemen">manajemen proyek</string>
    <string name="menu_latihan">latihan</string>
    <string name="menu_approve">Menu Approve</string>
    <string name="menu_visitor">Pengunjung</string>
    <string name="form_kunjungan_customer">form kunjungan customer</string>
    <string name="form_iklan_promo">form iklan promo</string>
    <string name="koneksi_bermaslah">Opps,,,, koneksi internet anda bermasalah</string>
    <string name="close">Close</string>
    <string name="informasi_memo">Memo</string>
    <string name="link_selengkapnya">Lihat Selengkapnya...</string>
    <string name="jenis_notulen">Notulen Meeting</string>
    <string name="slip_gaji_karyawan">Slip Gaji Karyawan</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="lupa_passwords">Lupa Password</string>
    <string name="pindah_akun">Pindah Akun?</string>
    <string name="jenis_memo">NOTULEN MEETING</string>
    <string name="nomor_memo">No. /HRD/XI/2020</string>
    <string name="dari_memo">Dari</string>
    <string name="kepada_memo">Kepada</string>
    <string name="hal_memo">Hal</string>
    <string name="tgl_memo">Tanggal</string>
    <string name="tgl_notulen">Tanggal</string>
    <string name="waktu">Waktu</string>
    <string name="tempat">Tempat</string>
    <string name="agenda">Agenda</string>
    <string name="peserta_rapat">Peserta</string>
    <string name="lampiran">Lampiran</string>
    <string name="lampiran_video">Video</string>
    <string name="lis">List</string>
    <string name="klik">Lihat</string>
    <string name="team_survei">Team Survei</string>
    <string name="kategori_cust">Kategori customer</string>
    <string name="nama_cust">Customer</string>
    <string name="alamat_lokasi">Alamat</string>
    <string name="no_telp_owner">No telp Owner</string>
    <string name="PIC">PIC/Logistik</string>
    <string name="no_telp_pic">No telp PIC</string>
    <string name="tahapan_progress">Tahapan</string>
    <string name="status_proyek">Status proyek</string>
    <string name="jenis_proyek">jenis proyek</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="gambar">gambar</string>
    <string name="dari_tgl">DARI TANGGAL</string>
    <string name="presensi_dari">Presensi dari:</string>
    <string name="sampai_tgl">SAMPAI</string>
    <string name="mulai_istirahat">Mulai Istirahat</string>
    <string name="selesai_istirahat">Selesai Istirahat</string>
    <string name="lokasi_awal">Lokasi berangkat</string>
    <string name="lokasi_tujuan">Lokasi tujuan</string>
    <string name="status">Status</string>
    <string name="detail">Detail klik disini</string>
    <string name="status_approve">Status Approve</string>
    <string name="set_lokasi">Set Location</string>
    <string name="versi_project">copyright@IT Qhome V.0320</string>
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ?"</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="hubungan">
        <item>Suami</item>
        <item>Istri</item>
        <item>Anak</item>
        <item>Ayah</item>
        <item>Ibu</item>
    </string-array>
    <string name="pesan_data_diri">Data diri anda dapat diperbarui pada halaman profil anda, atau anda bisa menekan tombol Update dibawah ini</string>
    <string name="pesan_data">(Pesan ini tidak akan muncul setelah mengisi data diri)</string>
    <string name="pesan_slip_gaji">Slip gaji ini bersifat rahasia, mohon untuk menyimpan dengan baik dan tidak diperlihatkan kepada pihak lain</string>
    <string name="pesan_persetujuan_izin">Apakah anda yakin ingin menyetujui izin</string>
    <string name="pesan_tolak_izin">Apakah anda yakin ingin menolak izin</string>
    <string name="pesan_example"></string>
    <string name="pesan_karyawan_resign">Mohon maaf anda sudah tidak terdaftar lagi sebagai pengguna di HRIS Mobile...!!</string>
    <string name="OOPS">Oops,,,!!</string>
    <string name="diterima">Diterima</string>
    <string name="ditolak"> Ditolak</string>
    <string name="dalamproses"> Dalam proses</string>
    <string name="ditolak_hrd"> Ditolak HRD</string>
    <string name="nama">Nama</string>
    <string name="jabatan">Jabatan</string>
    <string name="indikasi_penyakit">Indikasi Penyakit</string>
    <string name="catatan">Catatan</string>
    <string name="ajukan">Ajukan</string>
    <string name="lampiran_foto_surat_keterangan_dokter">Lampiran Foto Surat Keterangan Dokter</string>
    <string name="izin_meninggalkan_tugas">Izin Meninggalkan Tugas</string>
    <string name="izin_sakit">Izin Sakit</string>
    <string name="approve_izin_sakit">approve izin sakit</string>
    <string name="izin_dinas">Izin Dinas</string>
    <string name="cuti">Cuti</string>
    <string name="izin_sakit_approve_head">Daftar Pengajuan Izin Sakit</string>
    <string name="izin_dinas_approve_head">Daftar Pengajuan Izin Dinas</string>
    <string name="izin_tinggal_tugas_approve_head">Daftar Pengajuan Izin Meninggalkan Tugas</string>
    <string name="izin_cuti_approve_head">Daftar Pengajuan Izin Cuti</string>
    <string name="tambah">Tambah</string>
    <string name="data_ajuan">Data Pengajuan</string>
    <string name="lihat_dokumen">Lihat Dokumen</string>
    <string name="tgl_sakit">Tanggal Sakit</string>
    <string name="tgl_selesai_sakit">Tanggal Selesai Sakit</string>
    <string name="sukses">Berhasil Menyimpan Data</string>
    <string name="tolak">Tolak</string>
    <string name="text_title">Fake Android Apps With Over &#160; </string>
    <string name="text_description">Fake Android Apps With Over 50,000 Installations Found on Google Play, Quick Heal Claims</string>
    <string name="title_activity_tab_layout_test">TabLayoutTest</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="entry_java_title">Java</string>
    <string name="entry_java_subtitle">Run the MLKit Showcase written in Java.</string>
    <string name="entry_kotlin_title">Kotlin</string>
    <string name="entry_kotlin_subtitle">Run the MLKit Showcase written in Kotlin.</string>
    <string name="mode_odt_live_title">Object Detection: Live Camera</string>
    <string name="mode_odt_live_subtitle">A device’s live camera can be used to detect objects in an environment.</string>
    <string name="mode_odt_static_title">Object Detection: Static Image</string>
    <string name="mode_odt_static_subtitle">One or more objects can be detected from a provided image.</string>
    <string name="mode_barcode_live_title">Barcode Scanning</string>
    <string name="mode_barcode_live_subtitle">Read data encoded in most standard barcode formats.</string>
    <string name="custom_model_live_title">Object Detection: Live Camera with Custom Classification (Birds)</string>
    <string name="custom_model_live_subtitle">A device\'s live camera can be used to detect birds in an environment.</string>
    <string name="settings_title">MLKit Showcase Settings</string>
    <string name="cd_settings_button">Settings</string>
    <string name="cd_close_button">Back</string>
    <string name="cd_flash_button">Toggle camera flash</string>
    <string name="cd_photo_library_button">Upload image</string>
    <string name="prompt_point_at_an_object">Point your camera at an object</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_point_at_a_bird">Arahkan Kamera ke KTP Anda</string>
    <string name="prompt_hold_camera_steady">Tahan Posisi Kamera</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="scan_kartu_tanda_penduduk">Scan Kartu Tanda Penduduk</string>
    <string name="persiapkan_ktp_deskripsi">Persiapkan KTP untuk dilakukan scanning oleh device anda. Scanning ini berguna untuk membantu dalam update data diri. </string>
    <string name="mulai_scanning">Mulai Scanning</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nomor_ktp">Nomor KTP</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="alamat_sekarang">Alamat Sekarang</string>
    <string name="lihat_daftar_keluarga">Lihat Daftar Keluarga</string>
    <string name="kembali">Kembali</string>
    <string name="kontak_pribadi">Kontak Pribadi</string>
    <string name="no_hp">No. HP</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="data_tambahan">Data Tambahan</string>
    <string name="npwp">NPWP</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="foto_kk">Foto KK</string>
    <string name="foto_npwp">Foto NPWP</string>
    <string name="kirim_data">Kirim Data</string>
</resources>