<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanKTP.DetailUpdateData"
    android:padding="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_data_pribadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_pribadi"

            style="@style/TextViewHeaderStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_lengkap"

            app:layout_constraintTop_toBottomOf="@+id/tv_data_pribadi"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name_value"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_nomor_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_ktp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_no_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ktp_number_value"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_nomor_ktp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_tempat_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempat_lahir"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_no_ktp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_tempat_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tempat_lahir_value"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_tempat_lahir"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_tanggal_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_tempat_lahir"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_tanggal_lahir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_tanggal_lahir"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_tanggal_lahir"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_alamat_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_ktp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_tanggal_lahir"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_alamat_ktp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_alamat_ktp"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_alamat_ktp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_alamat_sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_sekarang"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_alamat_ktp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_alamat_sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_alamat_sekarang"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_alamat_sekarang"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_kontak_pribadi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kontak_pribadi"
            style="@style/TextViewHeaderStyle"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_alamat_sekarang"
            app:layout_constraintStart_toStartOf="parent"/>




        <TextView
            android:id="@+id/tv_no_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_kontak_pribadi"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_value_no_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_no_hp"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_no_hp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_alamat_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat_email"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_no_hp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_alamat_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_alamat_email"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_alamat_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_data_tambahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_tambahan"
            style="@style/TextViewHeaderStyle"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_value_alamat_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_npwp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/npwp"
            android:layout_marginTop="5dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_data_tambahan"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_value_npwp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="value_npwp"

            app:layout_constraintTop_toBottomOf="@+id/tv_npwp"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_foto_ktp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/foto_ktp"

            app:layout_constraintTop_toBottomOf="@id/tv_value_npwp"
            app:layout_constraintStart_toStartOf="@+id/iv_foto_ktp"
            app:layout_constraintEnd_toStartOf="@+id/tv_foto_kk"/>

        <ImageView
            android:id="@+id/iv_foto_ktp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_foto"

            app:layout_constraintTop_toBottomOf="@+id/tv_foto_ktp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_foto_kk"/>

        <TextView
            android:id="@+id/tv_foto_kk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/foto_kk"

            app:layout_constraintTop_toBottomOf="@id/tv_value_npwp"
            app:layout_constraintStart_toEndOf="@+id/tv_foto_ktp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_foto_kk"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_foto"

            app:layout_constraintTop_toBottomOf="@+id/tv_foto_ktp"
            app:layout_constraintStart_toEndOf="@+id/iv_foto_ktp"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_foto_npwp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foto_npwp"

            app:layout_constraintTop_toBottomOf="@id/iv_foto_kk"
            app:layout_constraintStart_toStartOf="@+id/iv_foto_npwp" />

        <ImageView
            android:id="@+id/iv_foto_npwp"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/empty_foto"

            app:layout_constraintTop_toBottomOf="@+id/tv_foto_npwp"
            app:layout_constraintStart_toStartOf="@+id/iv_foto_ktp"
            app:layout_constraintEnd_toEndOf="@+id/iv_foto_ktp"/>

        <Button
            android:id="@+id/bt_kembali"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            style="@style/ButtonStyleNegative"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"

            app:layout_constraintTop_toBottomOf="@+id/iv_foto_npwp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bt_kirim_data"/>

        <Button
            android:id="@+id/bt_kirim_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kirim_data"
            style="@style/ButtonStylePositive"

            app:layout_constraintTop_toBottomOf="@+id/iv_foto_npwp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/bt_kembali"
            app:layout_constraintBaseline_toBaselineOf="@+id/bt_kembali"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>