<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanKTP.NewUpdateDataDiri"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/tv_data_pribadi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_pribadi"
        style="@style/TextViewHeaderStyle"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/tv_nama_lengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/tv_data_pribadi"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nama_lengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"

        app:layout_constraintTop_toBottomOf="@+id/tv_nama_lengkap"/>

    <TextView
        android:id="@+id/tv_nomor_ktp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nomor_ktp"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/et_nama_lengkap"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nomor_ktp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="number"
        android:imeOptions="actionNext"

        app:layout_constraintTop_toBottomOf="@+id/tv_nomor_ktp" />

    <TextView
        android:id="@+id/tv_tempat_lahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempat_lahir"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/et_nomor_ktp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_tempat_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="text"
        android:imeOptions="actionNext"

        app:layout_constraintTop_toBottomOf="@+id/tv_tempat_lahir" />

    <TextView
        android:id="@+id/tv_tanggal_lahir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_lahir"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/et_tempat_lahir"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="date"
        android:imeOptions="actionNext"

        app:layout_constraintTop_toBottomOf="@+id/tv_tanggal_lahir" />

    <TextView
        android:id="@+id/tv_alamat_ktp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat_ktp"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/et_tanggal_lahir"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_alamat_ktp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="textMultiLine"
        android:imeOptions="actionNext"
        android:lines="2"

        app:layout_constraintTop_toBottomOf="@+id/tv_alamat_ktp" />

    <TextView
        android:id="@+id/tv_alamat_sekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat_sekarang"
        android:layout_marginTop="5dp"

        app:layout_constraintTop_toBottomOf="@+id/et_alamat_ktp"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_alamat_sekarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        style="@style/EditTextStyle"
        android:inputType="textMultiLine"
        android:imeOptions="actionDone"
        android:lines="2"

        app:layout_constraintTop_toBottomOf="@+id/tv_alamat_sekarang"/>

    <Button
        android:id="@+id/bt_lihat_daftar_keluarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lihat_daftar_keluarga"
        style="@style/ButtonStyleKeluarga"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/et_alamat_sekarang" />


    <Button
        android:id="@+id/bt_kembali"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kembali"
        style="@style/ButtonStyleNegative"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"

        app:layout_constraintTop_toBottomOf="@+id/bt_lihat_daftar_keluarga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_selanjutnya"/>

    <Button
        android:id="@+id/bt_selanjutnya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selanjutnya"
        style="@style/ButtonStylePositive"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/bt_lihat_daftar_keluarga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_kembali"/>

</androidx.constraintlayout.widget.ConstraintLayout>