<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".scanKTP.ScanKTP"
    android:padding="50dp">

    <TextView
        android:id="@+id/tv_scan_kartu_tanda_penduduk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_kartu_tanda_penduduk"
        style="@style/TextViewHeaderStyle"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/tv_persiapkan_ktp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/persiapkan_ktp_deskripsi"
        android:justificationMode="inter_word"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_scan_kartu_tanda_penduduk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/iv_id_example"
        android:layout_width="250dp"
        android:layout_height="212.50dp"
        android:src="@drawable/id_example"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_persiapkan_ktp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bt_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mulai_scanning"
        android:background="@drawable/rounded_button"
        style="@style/ButtonStylePositive"
        android:layout_marginTop="20dp"

        app:layout_constraintTop_toBottomOf="@+id/iv_id_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>